<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hk.ust.domain.temp.nxt_remote.MainActivity">

    <Button
        android:text="@string/forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/up_btn" />

    <Button
        android:text="@string/turn_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/up_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/left_btn" />

    <Button
        android:text="@string/turn_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/up_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/right_btn" />

    <Button
        android:text="@string/backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/left_btn"
        android:layout_centerHorizontal="true"
        android:id="@+id/down_btn" />

    <Button
        android:text="@string/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stop_btn"
        android:layout_below="@+id/up_btn"
        android:layout_alignRight="@+id/up_btn"
        android:layout_alignEnd="@+id/up_btn" />

    <TextView
        android:text="@string/not_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/down_btn"
        android:layout_centerHorizontal="true"
        android:id="@+id/state_txt" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/motor_right"
        android:layout_above="@+id/motor_left"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/state_txt"
        android:layout_toRightOf="@+id/state_txt" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/motor_right_power_forward"
        android:layout_above="@+id/motor_right_power_backward"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/motor_right_power_backward"
        android:layout_above="@+id/motor_left_power_forward"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/motor_left_power_forward"
        android:layout_above="@+id/motor_left_power_backward"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/motor_left_power_backward"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <TextView
        android:text="@string/motor_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/motor_left"
        android:layout_toStartOf="@+id/motor_right"
        android:layout_below="@+id/connect_btn"
        android:gravity="center_vertical"/>

    <TextView
        android:text="@string/motor_right_power_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:layout_above="@+id/motor_right_power_backward"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/motor_right_power_forward"
        android:layout_toStartOf="@+id/motor_right_power_forward"
        android:layout_alignTop="@+id/motor_right_power_forward"
        android:gravity="center_vertical"/>

    <TextView
        android:text="@string/motor_right_power_backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/motor_right_power_backward"
        android:layout_toStartOf="@+id/motor_right_power_backward"
        android:layout_above="@+id/motor_left_power_forward"
        android:layout_below="@+id/motor_right_power_forward"
        android:gravity="center_vertical"/>

    <TextView
        android:text="@string/motor_left_power_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/motor_right_power_backward"
        android:layout_toLeftOf="@+id/motor_right_power_backward"
        android:layout_above="@+id/motor_left_power_backward"
        android:layout_below="@+id/motor_right_power_backward"
        android:gravity="center_vertical"/>

    <TextView
        android:text="@string/motor_left_power_backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/motor_left_power_forward"
        android:layout_toStartOf="@+id/motor_left_power_forward"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/motor_left"
        android:layout_above="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <TextView
        android:text="@string/motor_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:layout_below="@+id/motor_right"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView4"
        android:layout_toLeftOf="@+id/motor_right"
        android:layout_toStartOf="@+id/motor_right"
        android:gravity="center_vertical"/>

    <Button
        android:text="@string/connect_to_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connect_btn"
        android:layout_above="@+id/motor_right"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/disconnect_btn"
        android:layout_above="@+id/motor_right"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/bend_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/bend_right_btn" />

    <Button
        android:text="@string/bend_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/bend_left_btn" />

</RelativeLayout>
